<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backg"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/logonobmck"/>

    <TextView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:layout_below="@id/imageView3"
        android:textColor="@color/black"
        android:textSize="62sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="250dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:gravity="center"
        android:text="@string/sign_in_to_continue"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerVertical="true" />

    <!-- Other views... -->

    <TextView
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_below="@id/textViewSignIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="#03A9F4"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true"
        />

    <!-- Other views... -->

    <TextView
        android:id="@+id/textViewNeedAccount"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="@dimen/_128sdp"
        android:layout_height="40dp"
        android:layout_below="@id/textViewNeedAccount"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="Login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="27sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextLogEmailAddress3"
        android:layout_width="wrap_content"
        android:hint="@string/enter_your_email"
        android:textColorHint="@color/black"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSignIn"
        android:layout_toEndOf="@id/button"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextTextLogPassword3"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:textColorHint="@color/black"
        android:layout_below="@id/button"
        android:layout_toEndOf="@id/textViewNeedAccount"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="200sp"
        android:layout_height="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewSignUp"
        android:text="Need an account?"
        android:textColor="@color/black"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/logsignup"
        android:layout_width="200sp"
        android:layout_height="24sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView9"
        android:text="Sign Up"
        android:onClick="SignUp"
        android:textColor="@color/black"
        android:textSize="20sp"
        />


</RelativeLayout>
